objects/INX_Package__c.object
<CustomObject>
    <description>Stores packages created in Infinit</description>
    <fields>
        <fullName>INX_Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>INX_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INX_Instance__c</fullName>
        <label>Instance</label>
        <referenceTo>INX_Instance__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>INX_Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>INX_Version__c</fullName>
        <label>Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>INX_Version__c</columns>
        <columns>INX_Instance__c</columns>
        <columns>INX_Created_Date__c</columns>
        <columns>INX_Last_Modified_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>